// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioTable renders correctly 1`] = `
<div
  className="portfolio-table"
>
  <div
    className="portfolio-table__header"
  >
    <div
      className="portfolio-table__title"
    >
      Group
    </div>
    <div
      className="portfolio-table__kpis"
    >
      <div
        className="portfolio-table__kpi"
      >
        Lease Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        Occupancy Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        CD Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        Renewal Rate
      </div>
    </div>
  </div>
  <div
    className="portfolio-table__body"
  >
    <div
      className="portfolio-property-group-row"
      style={Object {}}
    >
      <div
        className="portfolio-property-group-row__group portfolio-property-group-row__group--opening"
        onClick={[Function]}
      >
        <div
          className="portfolio-property-group-row__image"
          style={
            Object {
              "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
            }
          }
        />
        <div
          className="portfolio-property-group-row__title"
        >
          <div
            className="portfolio-property-group-row__name"
          >
            West
          </div>
          <div
            className="portfolio-property-group-row__property-count"
          >
            3
             Properties
          </div>
        </div>
        <div
          className="portfolio-property-group-row__kpis"
        >
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              90%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 90%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              80%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 80%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              10%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 10%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              50%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 50%
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-row"
    >
      <div
        className="portfolio-property-row__image"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg\\")",
          }
        }
      />
      <div
        className="portfolio-property-row__title"
      >
        <div
          className="portfolio-property-row__name"
        >
          Building D
        </div>
        <div
          className="portfolio-property-row__address"
        >
          San Antonio, TX 78207
        </div>
      </div>
      <div
        className="portfolio-property-row__info"
      >
        <div
          className="property-status portfolio-property-row__health property-status--at-risk"
        >
          AT RISK
        </div>
        <a
          className="portfolio-property-row__link"
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "inherit",
              "textDecoration": "inherit",
            }
          }
        >
          View Property
        </a>
      </div>
      <div
        className="portfolio-property-row__kpis"
      >
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            90%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 90%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            80%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 80%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            10%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 10%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            50%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 50%
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-row"
    >
      <div
        className="portfolio-property-row__image"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
          }
        }
      />
      <div
        className="portfolio-property-row__title"
      >
        <div
          className="portfolio-property-row__name"
        >
          Remarkably National
        </div>
        <div
          className="portfolio-property-row__address"
        >
          San Antonio, TX 78207
        </div>
      </div>
      <div
        className="portfolio-property-row__info"
      >
        <div
          className="property-status portfolio-property-row__health property-status--on-track"
        >
          ON TRACK
        </div>
        <a
          className="portfolio-property-row__link"
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "inherit",
              "textDecoration": "inherit",
            }
          }
        >
          View Property
        </a>
      </div>
      <div
        className="portfolio-property-row__kpis"
      >
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            90%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 90%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            80%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 80%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            10%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 10%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            50%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 50%
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-group-row"
      style={Object {}}
    >
      <div
        className="portfolio-property-group-row__group"
        onClick={[Function]}
      >
        <div
          className="portfolio-property-group-row__image"
          style={
            Object {
              "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
            }
          }
        />
        <div
          className="portfolio-property-group-row__title"
        >
          <div
            className="portfolio-property-group-row__name"
          >
            Portfolio Average
          </div>
        </div>
        <div
          className="portfolio-property-group-row__kpis"
        >
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              90%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 90%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              80%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 80%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              10%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 10%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              50%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 50%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioTable renders partial KPIs 1`] = `
<div
  className="portfolio-table"
>
  <div
    className="portfolio-table__header"
  >
    <div
      className="portfolio-table__title"
    >
      Group
    </div>
    <div
      className="portfolio-table__kpis"
    >
      <div
        className="portfolio-table__kpi"
      >
        Lease Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        Occupancy Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        CD Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        Renewal Rate
      </div>
    </div>
  </div>
  <div
    className="portfolio-table__body"
  >
    <div
      className="portfolio-property-group-row"
      style={Object {}}
    >
      <div
        className="portfolio-property-group-row__group portfolio-property-group-row__group--opening"
        onClick={[Function]}
      >
        <div
          className="portfolio-property-group-row__image"
          style={
            Object {
              "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
            }
          }
        />
        <div
          className="portfolio-property-group-row__title"
        >
          <div
            className="portfolio-property-group-row__name"
          >
            West
          </div>
          <div
            className="portfolio-property-group-row__property-count"
          >
            3
             Properties
          </div>
        </div>
        <div
          className="portfolio-property-group-row__kpis"
        >
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              90%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 90%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              80%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 80%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              10%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 10%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              50%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 50%
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-row portfolio-property-row--with-alarm"
    >
      <div
        className="portfolio-property-row__alarm"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          aria-hidden="true"
          className="portfolio-property-row__alarm-icon"
          color="inherit"
          fill="none"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 20 20"
          width="1em"
        >
          <circle
            cx="10"
            cy="10"
            r="9.5"
            stroke="#F3F65C"
          />
          <path
            d="M8.5 4.40002L8.96644 11.8667H11.0263L11.5536 4.40002H8.5ZM10.0037 13.2667C9.23695 13.2667 8.75863 13.7118 8.75863 14.437C8.75863 15.1557 9.23742 15.6 10.0037 15.6C10.7699 15.6 11.2424 15.1557 11.2424 14.437C11.2424 13.7118 10.7704 13.2667 10.0037 13.2667Z"
            fill="#F3F65C"
          />
        </svg>
      </div>
      <div
        className="portfolio-property-row__image"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg\\")",
          }
        }
      />
      <div
        className="portfolio-property-row__title"
      >
        <div
          className="portfolio-property-row__name"
        >
          Building D
        </div>
        <div
          className="portfolio-property-row__address"
        >
          San Antonio, TX 78207
        </div>
      </div>
      <div
        className="portfolio-property-row__info"
      >
        <div
          className="property-status portfolio-property-row__health property-status--at-risk"
        >
          AT RISK
        </div>
        <a
          className="portfolio-property-row__link"
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "inherit",
              "textDecoration": "inherit",
            }
          }
        >
          View Property
        </a>
      </div>
      <div
        className="portfolio-property-row__kpis"
      >
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-row"
    >
      <div
        className="portfolio-property-row__image"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
          }
        }
      />
      <div
        className="portfolio-property-row__title"
      >
        <div
          className="portfolio-property-row__name"
        >
          Remarkably National
        </div>
        <div
          className="portfolio-property-row__address"
        >
          San Antonio, TX 78207
        </div>
      </div>
      <div
        className="portfolio-property-row__info"
      >
        <div
          className="property-status portfolio-property-row__health property-status--on-track"
        >
          ON TRACK
        </div>
        <a
          className="portfolio-property-row__link"
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "inherit",
              "textDecoration": "inherit",
            }
          }
        >
          View Property
        </a>
      </div>
      <div
        className="portfolio-property-row__kpis"
      >
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            90%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 90%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            80%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 80%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            10%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 10%
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            50%
          </div>
          <div
            className="portfolio-property-row__target"
          >
            Target: 50%
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-group-row"
      style={Object {}}
    >
      <div
        className="portfolio-property-group-row__group"
        onClick={[Function]}
      >
        <div
          className="portfolio-property-group-row__image"
          style={
            Object {
              "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
            }
          }
        />
        <div
          className="portfolio-property-group-row__title"
        >
          <div
            className="portfolio-property-group-row__name"
          >
            Portfolio Average
          </div>
        </div>
        <div
          className="portfolio-property-group-row__kpis"
        >
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              90%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 90%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              80%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 80%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              10%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 10%
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              50%
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              Target: 50%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioTable renders without KPIs 1`] = `
<div
  className="portfolio-table"
>
  <div
    className="portfolio-table__header"
  >
    <div
      className="portfolio-table__title"
    >
      Group
    </div>
    <div
      className="portfolio-table__kpis"
    >
      <div
        className="portfolio-table__kpi"
      >
        Lease Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        Occupancy Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        CD Rate
      </div>
      <div
        className="portfolio-table__kpi"
      >
        Renewal Rate
      </div>
    </div>
  </div>
  <div
    className="portfolio-table__body"
  >
    <div
      className="portfolio-property-group-row"
      style={Object {}}
    >
      <div
        className="portfolio-property-group-row__group portfolio-property-group-row__group--opening"
        onClick={[Function]}
      >
        <div
          className="portfolio-property-group-row__image"
          style={
            Object {
              "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
            }
          }
        />
        <div
          className="portfolio-property-group-row__title"
        >
          <div
            className="portfolio-property-group-row__name"
          >
            West
          </div>
          <div
            className="portfolio-property-group-row__property-count"
          >
            3
             Properties
          </div>
        </div>
        <div
          className="portfolio-property-group-row__kpis"
        >
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-row portfolio-property-row--with-alarm"
    >
      <div
        className="portfolio-property-row__alarm"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          aria-hidden="true"
          className="portfolio-property-row__alarm-icon"
          color="inherit"
          fill="none"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 20 20"
          width="1em"
        >
          <circle
            cx="10"
            cy="10"
            r="9.5"
            stroke="#F3F65C"
          />
          <path
            d="M8.5 4.40002L8.96644 11.8667H11.0263L11.5536 4.40002H8.5ZM10.0037 13.2667C9.23695 13.2667 8.75863 13.7118 8.75863 14.437C8.75863 15.1557 9.23742 15.6 10.0037 15.6C10.7699 15.6 11.2424 15.1557 11.2424 14.437C11.2424 13.7118 10.7704 13.2667 10.0037 13.2667Z"
            fill="#F3F65C"
          />
        </svg>
      </div>
      <div
        className="portfolio-property-row__image"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg\\")",
          }
        }
      />
      <div
        className="portfolio-property-row__title"
      >
        <div
          className="portfolio-property-row__name"
        >
          Building D
        </div>
        <div
          className="portfolio-property-row__address"
        >
          San Antonio, TX 78207
        </div>
      </div>
      <div
        className="portfolio-property-row__info"
      >
        <div
          className="property-status portfolio-property-row__health property-status--not-available"
        >
          CAMPAIGN PENDING
        </div>
        <a
          className="portfolio-property-row__link"
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "inherit",
              "textDecoration": "inherit",
            }
          }
        >
          View Property
        </a>
      </div>
      <div
        className="portfolio-property-row__kpis"
      >
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-row portfolio-property-row--with-alarm"
    >
      <div
        className="portfolio-property-row__alarm"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          aria-hidden="true"
          className="portfolio-property-row__alarm-icon"
          color="inherit"
          fill="none"
          focusable="false"
          height="1em"
          role="presentation"
          viewBox="0 0 20 20"
          width="1em"
        >
          <circle
            cx="10"
            cy="10"
            r="9.5"
            stroke="#F3F65C"
          />
          <path
            d="M8.5 4.40002L8.96644 11.8667H11.0263L11.5536 4.40002H8.5ZM10.0037 13.2667C9.23695 13.2667 8.75863 13.7118 8.75863 14.437C8.75863 15.1557 9.23742 15.6 10.0037 15.6C10.7699 15.6 11.2424 15.1557 11.2424 14.437C11.2424 13.7118 10.7704 13.2667 10.0037 13.2667Z"
            fill="#F3F65C"
          />
        </svg>
      </div>
      <div
        className="portfolio-property-row__image"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
          }
        }
      />
      <div
        className="portfolio-property-row__title"
      >
        <div
          className="portfolio-property-row__name"
        >
          Remarkably National
        </div>
        <div
          className="portfolio-property-row__address"
        >
          San Antonio, TX 78207
        </div>
      </div>
      <div
        className="portfolio-property-row__info"
      >
        <div
          className="property-status portfolio-property-row__health property-status--not-available"
        >
          CAMPAIGN PENDING
        </div>
        <a
          className="portfolio-property-row__link"
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "inherit",
              "textDecoration": "inherit",
            }
          }
        >
          View Property
        </a>
      </div>
      <div
        className="portfolio-property-row__kpis"
      >
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
        <div
          className="portfolio-property-row__kpi"
        >
          <div
            className="portfolio-property-row__value"
          >
            
          </div>
          <div
            className="portfolio-property-row__target"
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className="portfolio-property-group-row"
      style={Object {}}
    >
      <div
        className="portfolio-property-group-row__group"
        onClick={[Function]}
      >
        <div
          className="portfolio-property-group-row__image"
          style={
            Object {
              "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
            }
          }
        />
        <div
          className="portfolio-property-group-row__title"
        >
          <div
            className="portfolio-property-group-row__name"
          >
            Portfolio Average
          </div>
        </div>
        <div
          className="portfolio-property-group-row__kpis"
        >
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
          <div
            className="portfolio-property-group-row__kpi"
          >
            <div
              className="portfolio-property-group-row__value"
            >
              
            </div>
            <div
              className="portfolio-property-group-row__target"
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
